# ns-cmsis-nn

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  ARM.CMSIS-NN.pdsc  ARM.NS-CMSIS-NN.pdsc  Ambiq.NS-CMSIS-NN.pdsc  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  check_pdsc.sh  gen_pack.sh  mkdocs.yml  module.mk  release-please-config.json  vcpkg-configuration.json  vcpkg.json  version.js
Source/: CMakeLists.txt
Source/ActivationFunctions/: CMakeLists.txt  arm_clamp_s16.c  arm_clamp_s8.c  arm_elementwise_prelu_s16.c  arm_elementwise_prelu_s8.c  arm_hard_swish_compat_s16.c  arm_hard_swish_compat_s8.c  arm_hard_swish_precise_s16.c  arm_hard_swish_precise_s8.c  arm_leaky_relu_s16.c  arm_leaky_relu_s8.c  arm_logistic_s16.c  arm_prelu_s16.c  arm_prelu_s8.c  arm_prelu_scalar_s16.c  arm_prelu_scalar_s8.c  arm_relu6_s8.c  arm_relu_s16.c  arm_relu_s8.c  arm_tanh_s16.c
Source/BasicMathFunctions/: CMakeLists.txt  arm_abs_s16.c  arm_abs_s8.c  arm_add_s16.c  arm_add_s8.c  arm_add_scalar_s16.c  arm_add_scalar_s8.c  arm_argmax_s16.c  arm_argmax_s8.c  arm_argmin_s16.c  arm_argmin_s8.c  arm_elementwise_add_fp16.c  arm_elementwise_add_s8.c  arm_elementwise_mul_s16.c  arm_elementwise_mul_s8.c  arm_elementwise_squared_difference_s16.c  arm_elementwise_squared_difference_s8.c  arm_elementwise_sub_f16.c  arm_elementwise_sub_fp16.c  arm_elementwise_sub_s16.c  arm_elementwise_sub_s8.c  arm_maximum_s16.c  arm_maximum_s8.c  arm_mean_s16.c  arm_mean_s8.c  arm_minimum_s16.c  arm_minimum_s8.c  arm_minmax_common_f16.c  arm_minmax_common_f32.c  arm_mul_s16.c  arm_mul_s8.c  arm_mul_scalar_s16.c  arm_mul_scalar_s8.c  arm_reduce_max_s16.c  arm_reduce_max_s8.c  arm_reduce_min_s16.c  arm_reduce_min_s8.c  arm_reduce_sum_s16.c  arm_rsqrt_s16.c  arm_sqrt_s16.c  (+9 more)
Source/BroadcastFunctions/: CMakeLists.txt  arm_broadcast_to_s16.c  arm_broadcast_to_s8.c
Source/ComparisonFunctions/: CMakeLists.txt  arm_comparison_s16.c  arm_comparison_s8.c
Source/ConcatenationFunctions/: CMakeLists.txt  arm_concatenation_s16.c  arm_concatenation_s32.c  arm_concatenation_s8.c  arm_split_f16.c  arm_split_fp16.c  arm_split_s16.c  arm_split_s8.c
Source/ConvolutionFunctions/: arm_convolve_1_x_1_image_s8.c  arm_convolve_1_x_1_out_s8.c  arm_convolve_1_x_n_s4.c  arm_convolve_1_x_n_s8.c  arm_convolve_1x1_image_s8.c  arm_convolve_1x1_out_s8.c  arm_convolve_1x1_s16_ns_np_nd.c  arm_convolve_1x1_s4.c  arm_convolve_1x1_s4_fast.c  arm_convolve_1x1_s8.c  arm_convolve_1x1_s8_fast.c  arm_convolve_even_s4.c  arm_convolve_get_buffer_sizes_s8.c  arm_convolve_s16.c  arm_convolve_s16_depthwise.c  arm_convolve_s16_fast_small_kernel.c  arm_convolve_s16_group_ch_mult_1.c  arm_convolve_s4.c  arm_convolve_s8.c  arm_convolve_weight_sum_s4.c  arm_convolve_weight_sum_s8.c  arm_convolve_wrapper_s16.c  arm_convolve_wrapper_s4.c  arm_convolve_wrapper_s8.c  arm_depthwise_conv_1d_valid_s1_d1_s8.c  arm_depthwise_conv_1d_valid_s1_d1_s8_1out.c  arm_depthwise_conv_1d_valid_s1_d1_s8_sw.c  arm_depthwise_conv_1d_wrapper_s8.c  arm_depthwise_conv_3x3_s8.c  arm_depthwise_conv_fast_s16.c  arm_depthwise_conv_s16.c  arm_depthwise_conv_s4.c  arm_depthwise_conv_s4_opt.c  arm_depthwise_conv_s8.c  arm_depthwise_conv_s8_1d_valid.c  arm_depthwise_conv_s8_1d_valid_1out.c  arm_depthwise_conv_s8_1d_valid_wrapper.c  arm_depthwise_conv_s8_direct.c  arm_depthwise_conv_s8_direct_3x3_same_padding.c  arm_depthwise_conv_s8_opt.c  (+13 more)
Source/DequantizationFunctions/: arm_dequantize_s16_f32.c  arm_dequantize_s8_f32.c
Source/DynamicUpdateSliceFunctions/: arm_dynamic_update_slice_s16.c  arm_dynamic_update_slice_s8.c
Source/FullyConnectedFunctions/: arm_fully_connected_fp16.c  arm_fully_connected_get_buffer_sizes_s16.c  arm_fully_connected_per_channel_s16.c  arm_fully_connected_s16.c  arm_fully_connected_s4.c  arm_fully_connected_wrapper_s16.c  arm_vector_sum_s4.c  arm_vector_sum_s8.c
Source/GatherFunctions/: arm_gather_nd_s16.c  arm_gather_nd_s8.c  arm_gather_s16.c  arm_gather_s8.c
Source/LSTMFunctions/: CMakeLists.txt  arm_gru_unidirectional_f16.c  arm_lstm_unidirectional_f16.c  arm_lstm_unidirectional_f32.c
Source/NNSupportFunctions/: CMakeLists.txt  arm_nn_conv1d_k3_packed_f32.c  arm_nn_conv1d_k5_packed_f32.c  arm_nn_depthwise_conv_nt_t_s4.c  arm_nn_depthwise_conv_nt_t_s8.c  arm_nn_gru_step_f16.c  arm_nn_mat_mul_core_1x_s4.c  arm_nn_mat_mul_core_4x_s8.c  arm_nn_mat_mult_nt_t_1x1_out_s8.c  arm_nn_mat_mult_nt_t_f16.c  arm_nn_mat_mult_nt_t_f32.c  arm_nn_mat_mult_nt_t_s16.c  arm_nn_mat_mult_nt_t_s16_align.c  arm_nn_mat_mult_nt_t_s8.c  arm_nn_transpose_conv_row_s16_s64.c  arm_nn_vec_mat_mult_t_fp16.c  arm_nn_vec_mat_mult_t_per_ch_s16.c  arm_nn_vec_mat_mult_t_per_ch_s8.c  arm_nn_vec_mat_mult_t_s16.c  arm_nn_vec_mat_mult_t_s4.c  arm_nn_vec_mat_mult_t_s8.c
Source/PadFunctions/: CMakeLists.txt  arm_mirror_pad_s16.c  arm_mirror_pad_s8.c  arm_pad_s16.c
Source/PoolingFunctions/: arm_max_pool_f16.c  arm_max_pool_f32.c
Source/QuantizationFunctions/: arm_dequantize_s16_f32.c  arm_dequantize_s8_f32.c  arm_quantize_f32_s16.c  arm_quantize_f32_s8.c  arm_quantize_s16_s16.c  arm_quantize_s8_s8.c
Source/ReshapeFunctions/: CMakeLists.txt  arm_batch_to_space_nd_s16.c  arm_batch_to_space_nd_s8.c  arm_depth_to_space_s16.c  arm_depth_to_space_s8.c  arm_resize_nearest_neighbor_s16.c  arm_resize_nearest_neighbor_s8.c  arm_space_to_batch_nd_s16.c  arm_space_to_batch_nd_s8.c  arm_space_to_depth_s16.c  arm_space_to_depth_s8.c
Source/ReverseSequenceFunctions/: arm_reverse_sequence_s16.c  arm_reverse_sequence_s8.c
Source/ScatterFunctions/: arm_scatter_nd_s16.c  arm_scatter_nd_s8.c
Source/SelectFunctions/: arm_select_v2_s16.c  arm_select_v2_s8.c  arm_where_s16.c  arm_where_s8.c
Source/SoftmaxFunctions/: arm_softmax_f16.c  arm_softmax_f32.c
Source/StridedSliceFunctions/: CMakeLists.txt  arm_strided_slice_f16.c  arm_strided_slice_fp16.c  arm_strided_slice_s16.c  arm_strided_slice_s32.c  arm_strided_slice_s8.c
Source/TileFunctions/: arm_tile_s16.c  arm_tile_s8.c
Tests/CodeGen/: setup.py  (+6 more)
nsx/: CMakeLists.txt  nsx-module.yaml
zephyr/: CMakeLists.txt  Kconfig  module.yaml  module.yml
(+3287 files in other folders)
